mailing list change

--- a/mycode/bookatable.html
+++ b/mycode/bookatable.html
@@ -53,7 +53,7 @@
                     <option value="Sunday">Sunday</option>
                   </select>
 
-            <p>Add me to the mailing list:</p>
+            <p>Add me to the mailing list please:</p>
             <div>
                 <input type="checkbox" checked>
             </div>
